# TicTacToe-

./: CMakeLists.txt  README.md  TicTacToe.pro.user.25212da.4.8-pre1  TicTacToewithChat.pro  application.cpp  application.h  application.ui  chatserver.cpp  chatserver.h  game.cpp  game.h  game.ui  gameplay.cpp  gameplay.h  gameserver.cpp  gameserver.h  main.cpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui  resources.qrc  serverworker.h  tictactoemainwindow.cpp  tictactoemainwindow.h  tictactoemainwindow.ui  tictactoeserver.cpp  tictactoeserver.h
ChatClient/: ChatClient.pro  chatwindow.cpp  chatwindow.ui
ChatServer/: serverwindow.cpp  serverwindow.ui
TicTacToe/: TicTacToe.pro  main.cpp
